--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <div class="note">𝙈𝙊𝙃𝙊𝙉 𝙐𝙉𝙏𝙐𝙆 𝙎𝘾𝙍𝙀𝙀𝙉𝙎𝙃𝙊𝙏 𝘽𝙐𝙆𝙏𝙄 𝙏𝙍𝘼𝙉𝙎𝙁𝙀𝙍<br><i>𝘊𝘈𝘛𝘈𝘛𝘈𝘕: 𝘛𝘐𝘋𝘈𝘒 𝘈𝘋𝘈 𝘉𝘜𝘒𝘛𝘐 𝘛𝘙𝘈𝘕𝘚𝘍𝘌𝘙 = 𝘛𝘐𝘋𝘈𝘒 𝘈𝘒𝘈𝘕 𝘋𝘐 𝘗𝘙𝘖𝘚𝘌𝘚</i></div>
     <div class="desc">Scan QR atau salin salah satu nomor di bawah</div>
 
-    <img src="https://files.catbox.moe/igiret.jpg" alt="QRIS" class="qris-img" id="qrisImg" />
+    <img src="https://files.catbox.moe/w69h1y.jpg" alt="QRIS" class="qris-img" id="qrisImg" />
 
     <div class="pay-id">
       <span>Dana: 087822561874</span>
